fix some bug and leaks

--- a/Resources/Particle.plist
+++ b/Resources/Particle.plist
@@ -1,113 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>frames</key>
-        <dict>
-            <key>defaultTexture.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{143,102},{64,64}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{64,64}}</string>
-                <key>sourceSize</key>
-                <string>{64,64}</string>
-            </dict>
-            <key>engine.jpg</key>
-            <dict>
-                <key>frame</key>
-                <string>{{209,129},{25,32}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{25,32}}</string>
-                <key>sourceSize</key>
-                <string>{25,32}</string>
-            </dict>
-            <key>engine2.jpg</key>
-            <dict>
-                <key>frame</key>
-                <string>{{209,102},{32,25}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{32,25}}</string>
-                <key>sourceSize</key>
-                <string>{32,25}</string>
-            </dict>
-            <key>toonFlare.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{139,127}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{139,127}}</string>
-                <key>sourceSize</key>
-                <string>{139,127}</string>
-            </dict>
-            <key>toonFlare2.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,131},{125,125}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{125,125}}</string>
-                <key>sourceSize</key>
-                <string>{125,125}</string>
-            </dict>
-            <key>toonGlow.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{129,168},{120,120}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{120,120}}</string>
-                <key>sourceSize</key>
-                <string>{120,120}</string>
-            </dict>
-            <key>toonSmoke.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{143,2},{110,98}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{110,98}}</string>
-                <key>sourceSize</key>
-                <string>{110,98}</string>
-            </dict>
-        </dict>
-        <key>metadata</key>
-        <dict>
-            <key>format</key>
-            <integer>2</integer>
-            <key>realTextureFileName</key>
-            <string>Particle.png</string>
-            <key>size</key>
-            <string>{255,290}</string>
-            <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:9a53de2de5048f80cb6f51c5435ac775:0aa9001dca74ea7885e073f13ec2d231:a81245e6b3ba81a9eb758737b44773a1$</string>
-            <key>textureFileName</key>
-            <string>Particle.png</string>
-        </dict>
-    </dict>
+<dict>
+	<key>frames</key>
+	<dict>
+		<key>defaultTexture.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{143,102},{64,64}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{64,64}}</string>
+			<key>sourceSize</key>
+			<string>{64,64}</string>
+		</dict>
+		<key>engine.jpg</key>
+		<dict>
+			<key>frame</key>
+			<string>{{209,129},{25,32}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<true/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{25,32}}</string>
+			<key>sourceSize</key>
+			<string>{25,32}</string>
+		</dict>
+		<key>engine2.jpg</key>
+		<dict>
+			<key>frame</key>
+			<string>{{209,102},{32,25}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<true/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{32,25}}</string>
+			<key>sourceSize</key>
+			<string>{32,25}</string>
+		</dict>
+		<key>toonFlare.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{2,2},{139,127}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{139,127}}</string>
+			<key>sourceSize</key>
+			<string>{139,127}</string>
+		</dict>
+		<key>toonFlare2.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{2,131},{125,125}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{125,125}}</string>
+			<key>sourceSize</key>
+			<string>{125,125}</string>
+		</dict>
+		<key>toonGlow.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{129,168},{120,120}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{120,120}}</string>
+			<key>sourceSize</key>
+			<string>{120,120}</string>
+		</dict>
+		<key>toonSmoke.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{143,2},{110,98}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{110,98}}</string>
+			<key>sourceSize</key>
+			<string>{110,98}</string>
+		</dict>
+	</dict>
+	<key>metadata</key>
+	<dict>
+		<key>format</key>
+		<integer>2</integer>
+		<key>realTextureFileName</key>
+		<string>Particle.png</string>
+		<key>size</key>
+		<string>{255,290}</string>
+		<key>smartupdate</key>
+		<string>$TexturePacker:SmartUpdate:9a53de2de5048f80cb6f51c5435ac775:0aa9001dca74ea7885e073f13ec2d231:a81245e6b3ba81a9eb758737b44773a1$</string>
+		<key>textureFileName</key>
+		<string>Particle.png</string>
+	</dict>
+</dict>
 </plist>
