--- a/Resources/emission.plist
+++ b/Resources/emission.plist
@@ -5,7 +5,7 @@
 	<key>angle</key>
 	<integer>90</integer>
 	<key>angleVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>blendFuncDestination</key>
 	<integer>771</integer>
 	<key>blendFuncSource</key>
@@ -13,7 +13,7 @@
 	<key>configName</key>
 	<string>emission</string>
 	<key>duration</key>
-	<real>-1</real>
+	<real>-1.0</real>
 	<key>emitterType</key>
 	<integer>0</integer>
 	<key>finishColorAlpha</key>
@@ -25,88 +25,93 @@
 	<key>finishColorRed</key>
 	<real>0.2</real>
 	<key>finishColorVarianceAlpha</key>
-	<real>1</real>
+	<real>1.0</real>
 	<key>finishColorVarianceBlue</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceGreen</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceRed</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishParticleSize</key>
 	<integer>6</integer>
 	<key>finishParticleSizeVariance</key>
 	<real>5.6301383972168</real>
 	<key>gravityx</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>gravityy</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>maxParticles</key>
-	<real>20</real>
+	<real>20.0</real>
 	<key>maxRadius</key>
 	<integer>0</integer>
 	<key>maxRadiusVariance</key>
-	<real>0</real>
+	<real>0.0</real>
+	<key>metaData</key>
+	<dict>
+		<key>yCoordFlippedConverted</key>
+		<integer>1</integer>
+	</dict>
 	<key>minRadius</key>
 	<integer>300</integer>
 	<key>minRadiusVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>particleLifespan</key>
 	<real>0.12046928524971</real>
 	<key>particleLifespanVariance</key>
 	<real>0.0591566780209541</real>
 	<key>radialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>radialAcceleration</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotatePerSecond</key>
 	<integer>360</integer>
 	<key>rotatePerSecondVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationEnd</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationEndVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationStart</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationStartVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>sourcePositionVariancex</key>
-	<real>7</real>
+	<real>7.0</real>
 	<key>sourcePositionVariancey</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>sourcePositionx</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>sourcePositiony</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>speed</key>
 	<integer>600</integer>
 	<key>speedVariance</key>
 	<real>26.32705497741699</real>
 	<key>startColorAlpha</key>
-	<real>1</real>
+	<real>1.0</real>
 	<key>startColorBlue</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorGreen</key>
 	<real>0.681643104553223</real>
 	<key>startColorRed</key>
-	<real>1</real>
+	<real>1.0</real>
 	<key>startColorVarianceAlpha</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceBlue</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceGreen</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceRed</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startParticleSize</key>
 	<real>18.5890407562256</real>
 	<key>startParticleSizeVariance</key>
 	<integer>10</integer>
 	<key>tangentialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>tangentialAcceleration</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>yCoordFlipped</key>
-	<integer>1</integer>
+	<integer>-1</integer>
 </dict>
 </plist>
